[project]
name = "repl-nix-telegramsummarybot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-migrate>=4.0.7",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
    "telegram>=0.0.1",
    "python-telegram-bot>=21.9",
    "openai>=1.57.2",
    "redis>=5.2.1",
]
